feat: Remove optimize_instance_size setting
